--- a/playbook.yml
+++ b/playbook.yml
@@ -74,7 +74,15 @@
           vars:
             mountpoint: jetbrains-toolbox
 
-      - name: Install Ports
+      - name: Add MacPorts to path
+        lineinfile:
+          line: /opt/local/bin
+          path: /etc/paths
+          state: present
+          insertbefore: /usr/local/bin
+        become: yes
+
+      - name: Install ports
         macports:
           selfupdate: yes
           upgrade: yes
