--- a/mas.yml
+++ b/mas.yml
@@ -1,5 +1,9 @@
 # Apps to install via the app store, with identifiers.
 ---
 mas_apps_to_install:
-    - 926036361 # LastPass
-    - 803453959 # Slack
+    - 926036361   # LastPass
+    - 803453959   # Slack
+    - 425955336   # Skitch
+    - 406479348   # Decked Builder
+    - 715768417   # MS remote desktop 8
+    - 1295203466  # MS remote desktop 10
