Install OpenJDK8 before other ports.

--- a/dmgs.yml
+++ b/dmgs.yml
@@ -13,3 +13,4 @@ dmgs_to_download_and_install:
     dmg_url: https://steamcdn-a.akamaihd.net/client/installer/steam.dmg
 
     # TODO VLC seems not to have a "latest" link. Find latest somehow?
+    # TODO ditto parallels, vagrant, docker. docker also wants you to be logged in...
