Don't upgrade pip.
File "/Applications/Xcode.app/Contents/Developer/usr/bin/pip3",
 line 10, in <module>sys.exit(main())
TypeError: 'module' object is not callable

--- a/pip.yml
+++ b/pip.yml
@@ -4,7 +4,7 @@ pip_global_packages_to_install: []
 
 pip_user_packages_to_install:
   # Start with the basics (upgrading these if necessary)
-  - pip
+#  - pip  # pip upgrade breaks pip3 bundled with xcode somehow.
   - virtualenv
   - virtualenvwrapper
 
