Add json helper to mas list. Add graphviz to ports.

--- a/mas.yml
+++ b/mas.yml
@@ -7,3 +7,4 @@ mas_apps_to_install:
     - 406479348   # Decked Builder
     - 715768417   # MS remote desktop 8
     - 1295203466  # MS remote desktop 10
+    - 453114608   # JSON Helper
