Add star realms to mas.

--- a/mas.yml
+++ b/mas.yml
@@ -8,3 +8,4 @@ mas_apps_to_install:
     - 715768417   # MS remote desktop 8
     - 1295203466  # MS remote desktop 10
     - 453114608   # JSON Helper
+    - 1066107760  # Star Realms
