--- a/ports.yml
+++ b/ports.yml
@@ -4,6 +4,7 @@ ports_to_install:
     autoconf:
     bash:
     coreutils:
+    editorconfig-core-c:    
     getopt:
     gmake:
     gmp: +native
@@ -12,10 +13,10 @@ ports_to_install:
     gwhich:
     harfbuzz:
     harfbuzz-icu:
-    ImageMagick: +graphviz +pango +svrg +wmf
+    ImageMagick: +graphviz +pango +svrg +wmf +x11
     jq:
+    lastpass-cli: +pientry  # reports ok but not installed. why?
     lastpass-cli-doc:
-    lastpass-cli: +pientry
     lesspipe:
     multimarkdown:
     poppler:
