--- a/roles/mactex/tasks/main.yml
+++ b/roles/mactex/tasks/main.yml
@@ -13,5 +13,4 @@
     - name: Install MacTeX
       command: "installer -pkg {{ downloads }}/mactex.pkg -target /"
       become: yes
-
-  when: not throwaway.stat.isdir
+  when: not (throwaway.stat.isdir is defined and throwaway.stat.isdir)
