Add postgresql10 to ports.

--- a/ports.yml
+++ b/ports.yml
@@ -20,6 +20,7 @@ ports_to_install:
     lesspipe:
     multimarkdown:
     poppler:
+    postgresql10:
     siege:
     texinfo:
     the_silver_searcher:
