Disable retry files.

--- a/playbook.yml
+++ b/playbook.yml
@@ -185,6 +185,8 @@
         tags:
           - ports
 
+      # TODO port select.
+
       - name: Clone .emacs.d
         git:
           repo: git@github.com:conleym/dot-emacs.git
