--- a/ports.yml
+++ b/ports.yml
@@ -23,6 +23,8 @@ ports_to_install:
     maven3:
     poppler:
     postgresql12:
+    python38: +optimizations
+    py38-pip:
     shellcheck:
     siege:
     texinfo:
