Fix bug installing macports from scratch. stat could use an overhaul for usability.

--- a/roles/macports/tasks/main.yml
+++ b/roles/macports/tasks/main.yml
@@ -16,4 +16,4 @@
       command: "installer -pkg {{ downloads }}/macports.pkg -target /"
       become: yes
 
-  when: not throwaway.stat.executable
+  when: not (throwaway.stat.executable is defined and throwaway.stat.executable)
