--- a/ports.yml
+++ b/ports.yml
@@ -19,6 +19,7 @@ ports_to_install:
     harfbuzz:
     harfbuzz-icu:
 #    ImageMagick: +graphviz +pango +svrg +wmf +x11
+    ImageMagick: +pango +svrg +wmf +x11
 #  needed for native json support in emacs.
     jansson:
     jq:
