--- a/roles/install_app_from_dmg/tasks/main.yml
+++ b/roles/install_app_from_dmg/tasks/main.yml
@@ -23,12 +23,12 @@
         mountpoint: "{{ app_name }}"
 
     - name: Copy app to destination
-      shell: "cp -aR '/Volumes/{{ app_name }}/{{ app_name }}.app' '{{ app_destination }}'"
-      when: install_method is 'cp'
+      shell: "cp -a '/Volumes/{{ app_name }}/{{ app_name }}.app' '{{ app_destination }}'"
+      when: install_method == 'cp'
 
     - name: Install package
       command: "installer -pkg /Volumes/{{ app_name }}/{{ install_method }} -target /"
-      when: install_method is regex(^'.*\.pkg'$)
+      when: install_method is regex('^.*\.pkg'$)
 
   always:
     - include_role:
