Add discord to dmgs.

--- a/dmgs.yml
+++ b/dmgs.yml
@@ -15,5 +15,8 @@ dmgs_to_download_and_install:
   - app_name: Minecraft
     dmg_url: https://launcher.mojang.com/download/Minecraft.dmg
 
+  - app_name: Discord
+    dmg_url: https://discordapp.com/api/download?platform=osx
+
     # TODO VLC seems not to have a "latest" link. Find latest somehow?
     # TODO ditto parallels, vagrant, docker. docker also wants you to be logged in...
